# 2022-wizard

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
apps/web/: .gitignore  package.json
apps/web/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
apps/web/app/: apple-icon.tsx  (+9 more)
components/: code-editor-mock.tsx  home-content.tsx  measurement-grid.tsx  wizard-button.tsx
components/ui/: select.tsx
components/wizard/: code-preview.tsx  settings-drawer.tsx  settings-panel.tsx  wizard-layout.tsx
lib/codegen/: index.ts
lib/wizard/: types.ts
programs/: CONTRIBUTING.md  TEMPLATE_SCHEMA.md  program-template.md  project-setup.md
programs/token-mint/: Anchor.toml  Cargo.toml  template.toml
programs/token-mint/base/: error.rs  lib.rs
programs/token-mint/base/instructions/: create_mint.rs
programs/token-mint/base/state/: mod.rs
programs/token-mint/extensions/close-mint/: mod.rs
programs/token-mint/extensions/metadata/: mod.rs
programs/token-mint/extensions/non-transferable/: mod.rs
programs/token-mint/extensions/transfer-fee/: mod.rs  update_fee.rs
public/: site.webmanifest
scripts/: compile-check.ts  extract-templates.ts  package.json  tsconfig.json
scripts/lib/: assembly.test.ts  marker-parser.test.ts  marker-parser.ts
(+280 files in other folders)
