[package]
name = "token-mint"
version = "0.1.0"
description = "Token-2022 mint program with optional extensions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_mint"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
spl-token-2022 = "4.0.0"
spl-token-metadata-interface = "0.4.0"
